src/test/java/testfiles/invalid/semanticErr/bitwise_operators/bitwiseOperatorsCreateAnInt.wacc
# evaluating shift left, should cause overflow

# Exit:
# 200

# Program:

begin
  int a = 1 ;
  int b = 2 ;
  string c = a & b
end
